--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "^14.0.0",
     "node-telegram-bot-api": "^0.67.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "supports-color": "^10.2.2"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
